# DecompOpt_thesis

./: Dockerfile  executor.py  output.tar.xz  pyproject.toml
data/: crossdocked_v1.1_rmsd1.0_processed_full_similarity.tar.xz  crossdocked_v1.1_rmsd1.0_processed_full_similarity_name2id.pt  split_by_name.pt  test_index.pkl
data/crossdocked_v1.1_rmsd1.0_processed/: index.pkl
data/crossdocked_v1.1_rmsd1.0_processed/ABL2_HUMAN_274_551_0/: 4xli_B_rec_4xli_1n1_lig_tt_min_0.sdf  4xli_B_rec_4xli_1n1_lig_tt_min_0_frags.sdf  4xli_B_rec_4xli_1n1_lig_tt_min_0_meta.pkl
data/crossdocked_v1.1_rmsd1.0_processed/ACE_HUMAN_650_1230_0/: 3l3n_A_rec_2iux_nxa_lig_tt_docked_2.sdf  3l3n_A_rec_2iux_nxa_lig_tt_docked_2_frags.sdf  (+1 more)
pregen_info/: natom_models.pkl
pregen_info/beta_priors/: 00000000.pkl  00000001.pkl  00000002.pkl  00000003.pkl  00000004.pkl  00000005.pkl  00000006.pkl  00000007.pkl  00000008.pkl  00000009.pkl  00000010.pkl  00000011.pkl  00000012.pkl  00000013.pkl  00000014.pkl  00000015.pkl  00000016.pkl  00000017.pkl  00000018.pkl  00000019.pkl  00000020.pkl  00000021.pkl  00000022.pkl  00000023.pkl  00000024.pkl  00000025.pkl  00000026.pkl  00000027.pkl  00000028.pkl  00000029.pkl  00000030.pkl  00000031.pkl  00000032.pkl  00000033.pkl  00000034.pkl  00000035.pkl  00000036.pkl  00000037.pkl  00000038.pkl  00000039.pkl  (+60 more)
scripts/: evaluate_mol_in_place_compose.py  sample_diffusion_decomp_compose.py  select_best_arm.py
scripts/run/: eval_vina_full.sh  sample_compose.sh
utils/: prior.py
utils/evaluation/: docking_vina.py  docking_vina_track.py
(+479 files in other folders)
